# ls-py175-file-cms

./: README.md  app.py  pyproject.toml
cms/: users.yml
cms/data/: about.md  changes.txt
static/javascripts/: application.js
static/stylesheets/: application.css
templates/: create_file.html  edit_file.html  file.html  files.html  index.html  layout.html  sign_in.html
tests/: test_app.py  users.yml
