[tool.poetry]
name = "file_based_cms"
version = "0.1.0"
description = ""
authors = ["Justin Schultz"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flask = "^3.0.0"
gunicorn = "^21.2.0"
uuid = "^1.30"
markdown = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"